# docs/api-docs.yaml
@@ -728,6 +728,115 @@ paths:
       security:
         - bearerAuth: []
 
+  /ticket/schedule:
+    post:
+      tags:
+        - "Ticket"
+      summary: Find ticket
+      description: Find ticket
+      parameters:
+        - name: page
+          in: query
+          description: Page number for pagination.
+          required: false
+          schema:
+            type: integer
+            example: 1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                city_arrive_id:
+                  type: string
+                  example: surabaya
+                city_destination_id:
+                  type: string
+                  example: Tangerang
+                date_departure:
+                  type: string
+                  example: 25-05-2024
+                seat_class:
+                  type: integer
+                  example: 2
+                passenger:
+                  type: object
+                  properties:
+                    adult:
+                      type: integer
+                      example: 1
+                    children:
+                      type: integer
+                      example: 1
+                sorting:
+                  type: object
+                  properties:
+                    sortAsc:
+                      type: boolean
+                      example: true
+                    price_from:
+                      type: integer
+                      example: 200000
+                    price_to:
+                      type: integer
+                      example: 1500000
+                    time_departure_from:
+                      type: string
+                      example: 07:00
+                    time_departure_to:
+                      type: string
+                      example: 09:00
+
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/FlightSchedule"
+
+  /ticket/class:
+    get:
+      tags:
+        - "Ticket"
+      summary: Get All type_class
+      description: Get All type_class
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: success retrive city data
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        type_class:
+                          type: string
+                          example: Ekonomi
+
   /ticket/flights:
     get:
       tags:
@@ -903,6 +1012,95 @@ paths:
                     type: string
                     example: "Flight not found"
 
+  /ticket/schedule/recomendation:
+    get:
+      tags:
+        - "Ticket"
+      summary: Get ticket flight recomendation
+      description: Get ticket flight recomendation by count order flight.
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "All flights retrieved successfully"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        detail_flight_id:
+                          type: integer
+                          example: 3
+                        order_count:
+                          type: integer
+                          example: 7
+                        detail:
+                          type: object
+                          properties:
+                            detailPlaneId:
+                              type: object
+                              properties:
+                                plane:
+                                  type: object
+                                  properties:
+                                    name:
+                                      type: string
+                                      example: "Boeing 737-800"
+                            flight:
+                              type: object
+                              properties:
+                                city_arrive:
+                                  type: object
+                                  properties:
+                                    id:
+                                      type: integer
+                                      example: 1
+                                    name:
+                                      type: string
+                                      example: "Tangerang"
+                                    code:
+                                      type: string
+                                      example: "CGK"
+                                    airport_name:
+                                      type: string
+                                      example: "Bandara Internasional Soekarno-Hatta"
+                                    country_id:
+                                      type: integer
+                                      example: 1
+                                city_destination:
+                                  type: object
+                                  properties:
+                                    id:
+                                      type: integer
+                                      example: 2
+                                    name:
+                                      type: string
+                                      example: "Denpasar"
+                                    code:
+                                      type: string
+                                      example: "DPS"
+                                    airport_name:
+                                      type: string
+                                      example: "Bandara Internasional Ngurah Rai"
+                                    country_id:
+                                      type: integer
+                                      example: 1
+                                estimation_minute:
+                                  type: integer
+                                  example: 240
+                            price:
+                              type: integer
+                              example: 1500000
+
 components:
   securitySchemes:
     bearerAuth:
@@ -957,6 +1155,58 @@ components:
           type: string
           example: user
 
+    FlightSchedule:
+      type: object
+      properties:
+        flightDetailId:
+          type: integer
+          description: Unique identifier for the flight detail.
+          example: 13
+        price:
+          type: integer
+          description: Price of a single ticket in the smallest currency unit (e.g., cents).
+          example: 300000
+        totalPrice:
+          type: integer
+          description: Total price for all tickets in the smallest currency unit (e.g., cents).
+          example: 600000
+        flightSeat:
+          type: string
+          description: Class of the flight seat.
+          example: Ekonomi
+        flightPlane:
+          type: string
+          description: Model of the airplane.
+          example: Boeing 737-900ER
+        id:
+          type: integer
+          example: 4
+        flight_number:
+          type: string
+          example: gua-570825
+        time_arrive:
+          type: string
+          example: 17:45
+        time_departure:
+          type: string
+          example: 08:30
+        date_flight:
+          type: string
+          example: 25-05-2024
+        city_arrive_id:
+          type: integer
+          example: 1
+        city_destination_id:
+          type: integer
+          example: 3
+        estimation_minute:
+          type: integer
+          example: 180
+        city_arrive:
+          $ref: "#/components/schemas/City"
+        city_destination:
+          $ref: "#/components/schemas/City"
+
     BasicFlightInfo:
       type: object
       properties:
@@ -987,6 +1237,25 @@ components:
         city_destination_id:
           type: integer
           example: 2
+
+    City:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: Tangerang
+        code:
+          type: string
+          example: CGK
+        airport_name:
+          type: string
+          example: Bandara Internasional Soekarno-Hatta
+        country:
+          type: string
+          example: Indoensia
 
   requestBodies:
     createLogin:
